<resources>
    <string name="app_name">Care Sense</string>
    <string name="title_home">Recent Activity</string>
    <string name="title_alerts">Manage Alerts</string>
    <string name="title_sensors">Manage Sensors</string>
    <string name="timestamp">Timestamp</string>
    <string name="location">Location</string>
    <string name="refresh_list">Refresh List</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="sensor_3">Sensor 3</string>
    <string name="notify_after">Notify after:</string>
    <string name="hours">Hours</string>
    <string name="nickameTitle">Room Nickname *Optional*</string>
    <string name="submit">Add Sensor</string>
    <string name="alertRoom1">Bathroom</string>
    <string name="alertTime1">30 min</string>
    <string name="alertRoom2">Bedroom</string>
    <string name="alertTime2">10 hr</string>
    <string name="roomTitle">Room</string>
    <string name="timeTitle">Time</string>
    <string name="startTitle">Start</string>
    <string name="endTitle">End</string>
    <string name="startTime1">20:00</string>
    <string name="endTime1">6:00</string>
    <string name="alertTable">Timed Alerts</string>
    <string name="timeframeTable">Time Framed Alerts</string>

    <string-array name="rooms">
        <item>Bedroom</item>
        <item>Bathroom</item>
        <item>Stairs</item>
        <item>Outdoor Stairs</item>
        <item>Living Room</item>
        <item>Kitchen</item>
        <item>Basement</item>
        <item>Powder Room</item>
    </string-array>
</resources>
