<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:layout_marginBottom="56dp">

    <TextView
        android:id="@+id/home_title"
        android:padding="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_home"
        android:textColor="#000"
        android:textSize="28dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/actionList"
        android:layout_below="@+id/home_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/refresh"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/refresh"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sensorTwo"
        android:text="@string/refresh_list" />

    <Button
        android:id="@+id/sensorOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sensor_1" />

    <Button
        android:id="@+id/sensorTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sensor_2" />

    <Button
        android:id="@+id/sensorThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sensor_3" />

</RelativeLayout>